--- a/src/pages/Resume/sections/LiveProjects.scss
+++ b/src/pages/Resume/sections/LiveProjects.scss
@@ -78,7 +78,7 @@
     gap: 16px;
 
     @include devices(mobile) {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: 1fr;
         gap: 12px;
     }
 }
